smokeping/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smokeping
  labels:
    k8s-app: smokeping
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/external-ip: "172.19.74.20"
spec:
  rules:
    - host: "smokeping.k.oneill.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: smokeping
              servicePort: 80
